--- a/src/components/scss/footer/index.module.scss
+++ b/src/components/scss/footer/index.module.scss
@@ -1,19 +1,14 @@
 .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #282c34;
-    color: #ffffff;
-    padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--solid-black);
+  color: var(--white);
+  padding: 10px 0;
 }
+
 .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.icons {
-    margin-top: 1.5rem;
-    a:not(:last-child) {
-        margin-right: 1.5rem;
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
