--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,35 @@
+@import './colors';
+
 html,
 body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-        "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
-        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-        "Noto Color Emoji";
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  background-color: var(--solid-black);
+}
+
+.ReactModal__Overlay {
+  background-color: #000000cc;
+  opacity: 0;
+  transform: translateX(-100px);
+  transition: all 500ms ease-in-out;
+
+  &--after-open {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+
+  &--before-close {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  & .ReactModal__Content--after-open {
+    width: 50%;
+    margin: 0 auto;
+    min-width: 350px;
+    max-width: 600px;
+  }
 }
