--- a/src/components/GifCard/index.module.scss
+++ b/src/components/GifCard/index.module.scss
@@ -7,6 +7,7 @@
 
 
   @media screen and (max-width: 920px) {
+    margin-top: 15px;
     justify-content: center;
     align-items: center;
     flex-direction: column-reverse;
